--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,6 @@ clone:
   path: github.com/olivier5741/stock-manager
 build:
   image: golang:1.5
-  commands:
-    - go get
-    - go build
-    - go test
+script:
+  - go build
+  - go test -v
