--- a/.drone.yml
+++ b/.drone.yml
@@ -1,8 +1,7 @@
 
-clone:
-  path: github.com/olivier5741/stock-manager
-build:
-  image: golang:1.5
+image: golang:1.5
+env:
+  - GOPATH=/var/cache/drone
 script:
   - go build
   - go test -v
