--- a/.drone.yml
+++ b/.drone.yml
@@ -1,5 +1,10 @@
+clone:
+  path: github.com/olivier5741/stock-manager
+
 build:
-  image: golang
+  image: golang:1.5
+  environment:
+    - GO15VENDOREXPERIMENT=1
   commands:
     - go get -d ./...
     - cd cmd/main
