French translation update

--- a/cmd/main/c-int/fr-be.all.yaml
+++ b/cmd/main/c-int/fr-be.all.yaml
@@ -1,7 +1,7 @@
 - id: csv_header_factor_stock_unit_order_unit
   translation: Coeff.
 - id: csv_header_item_product
-  translation: Prod
+  translation: Produit
 - id: csv_header_item_value
   translation: Valeur {{.Count}}
 - id: csv_header_item_unit
