nto order functionality

--- a/asset/fr-be.all.yaml
+++ b/asset/fr-be.all.yaml
@@ -42,6 +42,8 @@
   translation: stock
 - id: file_name_stock_in
   translation: entree
+- id: file_name_stock_minimum
+  translation: minimum
 - id: file_name_stock_out
   translation: sortie
 - id: file_name_to_order
